--- a/Assets/MyEditor/Layout.uxml
+++ b/Assets/MyEditor/Layout.uxml
@@ -1,8 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
+    <ui:TextField label="UserName" placeholder-text="filler text" name="UserName" />
     <ui:TextField label="Access Token" placeholder-text="filler text" name="AccessToken" />
     <ui:TextField label="Repository Name" placeholder-text="filler text" name="RepositoryName" />
     <ui:TextField label="Description" placeholder-text="filler text" name="Description" />
     <ui:Toggle label="private" name="Private" />
     <ui:Button text="Create" name="Create" />
     <ui:Button text="selectfolder" name="SelectFolder" />
+    <ui:Button text="Init" name="Init" />
 </ui:UXML>
